Improving testing and push event listener for observability